# HLRAPrak

./: README.md
Blatt1/Code/: Arrays.cpp  Arrays.out  ArraysDebug  ConditionalStatements.cpp  ConditionalStatements.out  Factorial.cpp  Factorial.out  FunctionArguments.cpp  FunctionArguments.out  HelloWorld.cpp  HelloWorld.out  PointerWalk.cpp  PointerWalk.out  PointersAndFunctions.cpp  PointersAndFunctions.out  PowerOfReferences.cpp  PowerOfReferences.out  PowerOfReferencesFast.out  Templates.cpp  Templates.out
Blatt2/Abgabe/: HLRA_Blatt2_Abgabe.docx
Blatt2/Code/: World.cpp  cli.cpp
Blatt2/Code/configurations/: CMakeLists.txt
Blatt2/Code/includes/: World.h  cli.h
Blatt2/Code/save/: 1000x1000.txt  100x100.txt  10x10.txt  20x20.txt
Blatt3/Abgabe/: HLRA_Blatt3_Abgabe.docx
Blatt3/Code/: CMakeLists.txt  main.cpp
Blatt3/Code/include/: MLPLayer.h  Utils.h
Blatt3/Code/src/: MLPHandler.cpp  Utils.cpp
Blatt4/: HLRA_Blatt4_Abgabe.docx
Blatt4/Code/: 4_1.out  4_2_1.out  4_3.out  CheckSum.cpp  Matrix.cpp  QuadraticEqn.cpp  a.out
Blatt5/Abgabe/: HLRA_Blatt5_Abgabe.docx
Blatt5/Code/matrix/: matrix.cpp  matrix.out
Blatt5/Code/newton/: newton.cpp  newton.out
Blatt5/Code/quadratic_equations/: Makefile  quadratic_equation.cpp  quadratic_equation.out
Blatt5/Code/random_access/: Makefile  random_access.cpp  random_access.out
Blatt6/Abgabe/: HLRA_Blatt6_Abgabe.docx
Blatt6/Code/: HelloWorld.cpp  Matrix.cpp  Matrix.out  Pi.cpp  Pi.out
Blatt6/Code/GameOfLife/: GameOfLife  GameOfLife.cpp  World.cpp  cli.cpp
Blatt7/Code/: export_paths.sh
(+26 files in other folders)
